# pymurtree

./: .buildinfo  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  LICENSE  README.md  _test_example.py  api_reference.html  example.py  genindex.html  index.html  issues.md  lifecycle.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.py
.github/workflows/: build.yml  docs.yaml  gen-citation.yaml  pip.yml  publish.yml  python-tests.yml  wheels.yml
_downloads/7bac0a62478dbe756ced347475a85850/: pip.yml
_sources/: api_reference.rst  readme.md.txt
docs/: api_reference.rst  conf.py  index.rst  lifecycle.md  readme.md
src/: __init__.py  main.cpp  main.py  parameter.py
src/pymurtree/: OptimalDecisionTreeClassifier.py  __init__.py  bindings.cpp  exporttree.cpp  exporttree.h  main.cpp  optimaldecisiontreeclassifier.py  parameters.py  readdata.py
tests/: test_murtree.py  test_optimal_decision_tree_classifier.py  test_parameters.py  test_readdata.py
tests/cpptests/: CMakeLists.txt  testexporttree.cpp
tests/cpptests/data/: dotfileheader.txt  fivenodesfouredgestree.dot  fivenodesfouredgestree.txt  singlefeaturenodetree.dot  singlefeaturenodetree.txt  singlelabelnodetree.dot  singlelabelnodetree.txt
tests/fixtures/: expected_fit_output.txt  expected_predict_output.txt  test_dataset.txt
