[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "gitpython>=2.1.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# THIS IS NOT CURRENTLY WORKING AND IT SHOULD BE FIXED
# TESTS SHOULD BE RUN IN ALL PLATFORMS
# test-requires = [ "pytest"]
# test-command = "pytest"
test-skip = "*universal2:arm64"

[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py37"

[project]
name = "pymurtree"
version = "0.0.1"
description = "Python bindings for MurTree C++ library"
readme = "README.md"
long_description = {file = "README.md"}
long_description_content_type = "text/markdown"
license = "MIT"
keywords = ["MurTree", "Optimal decision tree", "Python bindings"]

authors = [
  {name = "Yasel Quintero", orcid = ""},
  {name = "Jose Urra", orcid = "0000-0002-9334-3998"},
]

dependencies =[
    "pandas>=1.0.0",
    "numpy>=1.18.0",
]

[project.urls]
homepage = "https://github.com/MurTree/pymurtree.git"
MurTreeCpp = "https://github.com/MurTree/murtree"
sample_data = "https://github.com/MurTree/murtree-data"
journal = "https://doi.org/10.48550/arXiv.2007.12652"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux", ]

[project.optional-dependencies]
dev = [
    "pytest>=5.3.0",
    "pytest-cov>=2.8.0",
]
publishing = [
    "cff-from-621",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src/pymurtree",
]


[tool.cff-from-621]
order = ["message", "cff-version", "title", "abstract", "version", "date-released", "authors", "keywords"]

[tool.cff-from-621.static]
date-released = "2022-09-18"
message = "If you use this software, please cite it as below."

[tool.setuptools.dynamic]
version = {attr = "cff_from_621.version.VERSION"}
