[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "gitpython>=2.1.0"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# THIS IS NOT CURRENTLY WORKING AND IT SHOULD BE FIXED
# TESTS SHOULD BE RUN IN ALL PLATFORMS
# test-requires = [ "pytest"]
# test-command = "pytest"
test-skip = "*universal2:arm64"

[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP"  # pyupgrade
]
extend-ignore = [
  "E501"   # Line too long
]
target-version = "py37"

[project]
name = "pymurtree"
version = "0.0.2"
description = "Python bindings for MurTree C++ library"
readme = "README.md"
keywords = ["MurTree", "Optimal decision tree", "Python bindings"]

authors = [
  {name = "Yasel Quintero"},
  {name = "Jose Urra"},
  {name = "Koos van der Linden"},
  {name = "Emir Demirovic"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0"
]

[project.license]
file = 'LICENSE'


[project.urls]
homepage = "https://github.com/MurTree/pymurtree.git"
MurTreeCpp = "https://github.com/MurTree/murtree"
sample_data = "https://github.com/MurTree/murtree-data"
journal = "https://doi.org/10.48550/arXiv.2007.12652"

[project.optional-dependencies]
dev = [
    "pytest>=5.3.0",
    "pytest-cov>=2.8.0"
]

docs = [
  "sphinx",
  'myst-parser',  
  "sphinx_rtd_theme",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src/pymurtree"
]
